<resources>
    <string name="app_name">Unit Converter</string>
    <string name="WelcomeToSIT">Welcome to SIT</string>
    <string name="Touch">Touch</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="Number" />
    <string name="enter_number">Enter Number</string>
    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="weight">Weight</string>
    <string name="spinner">Spinner</string>
    <string name="Val1">TextView</string>
    <string name="Val2">TextView</string>
    <string name="Val3">TextView</string>
    <string name="SVal1">TextView</string>
    <string name="SVal2">TextView</string>
    <string name="SVal3">TextView</string>

    <string-array name="item_class">
        <item>Metre</item>
        <item>Celsius</item>
        <item>Kilogram</item>
    </string-array>
</resources>